--- a/.config/sway/config
+++ b/.config/sway/config
@@ -6,7 +6,8 @@
 
 exec --no-startup-id init
 exec --no-startup-id kitty
-exec --no-startup-id swww
+exec --no-startup-id swww-daemon
+exec_always autotiling
 
 ### Variables
 set $mod Mod1
@@ -20,11 +21,14 @@ set $term kitty
 # Your preferred application launcher
 # Note: pass the final command to swaymsg so that the resulting window can be opened
 # on the original workspace that the command was run on.
-set $menu $(tofi-drun)
+set $menu rofi -show drun
 
 # Example configuration:
 #
 #   output HDMI-A-1 resolution 1920x1080 position 1920,0
+output eDP-1 mode 3024x1964 pos 0 0 scale 2
+output "Fujitsu Siemens Computers GmbH E24T-7 LED YV8X006903" mode 1920x1080 pos 3432 0
+output HDMI-A-1 mode 1920x1080 pos 1512 0
 #
 # You can get the names of your outputs by running: swaymsg -t get_outputs
 
@@ -191,9 +195,18 @@ bindsym $mod+r mode "resize"
 # Decorations:
 # 
 font pango:monospace 10
-for_window [title="^.*"] title_format ""
-default_border none 
-default_floating_border normal 0
+#for_window [title="^.*"] title_format ""
+#default_border none 
+#default_floating_border normal 0
+
+# The same as default_border none
+default_border pixel 1
+
+client.focused          #81A1C1 #81A1C1 #D8DEE9 #a7c080   #81A1C1
+client.focused_inactive #61AFEF #61AFEF #2E3440 #a7c080   #61AFEF
+client.unfocused        #3B4252 #3B4252 #D8DEE9 #a7c080   #3B4252
+client.urgent           #BF616A #BF616A #D8DEE9 #a7c080   #BF616A
+client.placeholder      #2E3440 #2E3440 #D8DEE9 #a7c080   #2E3440
 
 
 #
