feat(i3): make i3 bearable

--- a/.config/i3/config
+++ b/.config/i3/config
@@ -4,6 +4,7 @@ font pango:monospace 8
 
 exec --no-startup-id dex --autostart --environment i3
 exec --no-startup-id gentoo-pipewire-launcher
+exec_always --no-startup-id autotiling
 
 set $refresh_i3status killall -SIGUSR1 i3status
 bindsym XF86AudioRaiseVolume exec --no-startup-id pactl set-sink-volume @DEFAULT_SINK@ +10% && $refresh_i3status
