feat(sway): move to new laptop

--- a/.config/sway/config
+++ b/.config/sway/config
@@ -11,6 +11,7 @@ exec --no-startup-id swww-daemon
 exec --no-startup-id gentoo-pipewire-launcher
 exec --no-startup-id mako
 exec --no-startup-id foot --server
+exec --no-startup-id waybar
 exec_always autotiling
 
 ### Variables
@@ -30,12 +31,22 @@ set $menu rofi -show drun
 # Example configuration:
 #
 #   output HDMI-A-1 resolution 1920x1080 position 1920,0
-output eDP-1 mode 3024x1964 pos 0 0 scale 2
-output "Fujitsu Siemens Computers GmbH E24T-7 LED YV8X006903" mode 1920x1080 pos 3432 0
-output "Acer Technologies V223HQ LJ40D0418509" mode 1920x1080 pos 1512 0 transform 90
-output HDMI-A-1 mode 1920x1080@165Hz pos 2592 0
+output eDP-1 mode 2256x1504 pos 0 0 scale 1.5
+# DO NOT USE is with USB-C to USB-C Framework adapter and then a USB-C to DisplayPort adapter and then a DisplayPort to VGA adapter :)
+output "DO NOT USE - RTK 0x1D1A 0x01010101" mode 1920x1080 pos 1504 0 transform 90 
+output "Microstep Optix AG32C 0000000000001" mode 1920x1080@165Hz pos 2584 0
+output "Fujitsu Siemens Computers GmbH E24T-7 LED YV8X006903" mode 1920x1080@60Hz pos 4504 0 transform 270
 #
 # You can get the names of your outputs by running: swaymsg -t get_outputs
+
+# Workspace configuration
+workspace  1 output "Microstep Optix AG32C 0000000000001"
+workspace  2 output "Microstep Optix AG32C 0000000000001"
+workspace  3 output "Microstep Optix AG32C 0000000000001"
+workspace  7 output "Fujitsu Siemens Computers GmbH E24T-7 LED YV8X006903" 
+workspace  8 output "DO NOT USE - RTK 0x1D1A 0x01010101"
+workspace  9 output "Fujitsu Siemens Computers GmbH E24T-7 LED YV8X006903"
+workspace 10 output eDP-1
 
 ### Idle configuration
 #
@@ -94,17 +105,14 @@ input type:touchpad {
     bindsym $mod+Shift+s exec screenshot
     bindsym $mod+Shift+f exec firefox
     bindsym $mod+Shift+t exec thunderbird
-    bindsym $mod+Shift+e exec nix-shell -p element-desktop --run element-desktop # should fix this, not too bothered by it now since it works
-    bindsym $mod+Shift+m exec /home/liv/.local/src/signal-desktop-unofficial/opt/Signal\ Unofficial/signal-desktop-unofficial
+    bindsym $mod+Shift+e exec element-desktop
+    bindsym $mod+Shift+n exec notes
     bindsym $mod+Shift+v exec virt-manager
-    bindsym $mod+Shift+n exec kitty --class floating -e nmtui connect
     bindsym Mod4+Shift+l exec lock
-    bindsym XF86AudioRaiseVolume exec --no-startup-id controls volume_up
-    bindsym XF86AudioLowerVolume exec --no-startup-id controls volume_down
-    bindsym XF86MonBrightnessUp exec --no-startup-id controls brightness_up
-    bindsym XF86MonBrightnessDown exec --no-startup-id controls brightness_down
-    bindsym $mod+XF86MonBrightnessUp exec --no-startup-id kbbl --up 5
-    bindsym $mod+XF86MonBrightnessDown exec --no-startup-id kbbl --down 5
+    bindsym XF86AudioRaiseVolume exec --no-startup-id pactl set-sink-volume @DEFAULT_SINK@ +5%; notify-send "Volume is at $(pulsemixer --get-volume | cut -d' ' -f1)%"
+    bindsym XF86AudioLowerVolume exec --no-startup-id pactl set-sink-volume @DEFAULT_SINK@ -5%; notify-send "Volume is at $(pulsemixer --get-volume | cut -d' ' -f1)%"
+    bindsym $mod+F7 exec --no-startup-id doas brightnessctl s 5%-; notify-send -r 45829 "Brightness is at $(brightnessctl info | grep % | awk '{print $4}' | cut -d\( -f2 | cut -d\) -f1)"
+    bindsym $mod+F8 exec --no-startup-id doas brightnessctl s 5%+; notify-send -r 45829 "Brightness is at $(brightnessctl info | grep % | awk '{print $4}' | cut -d\( -f2 | cut -d\) -f1)"
 
     # Drag floating windows by holding down $mod and left mouse button.
     # Resize them with right mouse button + $mod.
@@ -229,31 +237,34 @@ client.focused_inactive  #000000 #000000 #eceff4 #000000 #000000
 client.unfocused         #000000 #000000 #eceff4 #000000 #000000
 client.urgent            #434c5e #434c5e #eceff4 #434c5e #434c5e
 
+gaps inner 15
+gaps outer 10
+
 #
 # Status Bar:
 #
 # Read `man 5 sway-bar` for more information about this section.
-bar {
-    position top
-
-    height 33 # MBP notch is here
-
-    # When the status_command prints a new line to stdout, swaybar updates.
-    # The default just shows the current date and time.
-    status_command while bar; do sleep 1; done
-    #status_command while date +'%Y-%m-%d %X'; do sleep 1; done
-
-    colors {
-        statusline #ffffff
-        #background #00000000
-        background #000000
-        #inactive_workspace #00000000 #00000000 #ffffff
-        inactive_workspace #000000 #000000 #ffffff
-        #active_workspace #00000000 #ffffff #000000
-        active_workspace #000000 #ffffff #000000
-        #focused_workspace #00000000 #ffffff #000000
-        focused_workspace #000000 #ffffff #000000
-    }
-}
+#    bar {
+#        position top
+#    
+#        height 25
+#    
+#        # When the status_command prints a new line to stdout, swaybar updates.
+#        # The default just shows the current date and time.
+#        status_command while bar; do sleep 1; done
+#        #status_command while date +'%Y-%m-%d %X'; do sleep 1; done
+#    
+#        colors {
+#            statusline #ffffff
+#            #background #00000000
+#            background #000000
+#            #inactive_workspace #00000000 #00000000 #ffffff
+#            inactive_workspace #000000 #000000 #ffffff
+#            #active_workspace #00000000 #ffffff #000000
+#            active_workspace #000000 #ffffff #000000
+#            #focused_workspace #00000000 #ffffff #000000
+#            focused_workspace #000000 #ffffff #000000
+#        }
+#    }
 
 include /etc/sway/config.d/*
