feat(foot): black bg and huge padding because looks clean

--- a/.config/foot/foot.ini
+++ b/.config/foot/foot.ini
@@ -8,7 +8,8 @@
  title=foot
  locked-title=no
 
-font=ComicShannsMono Nerd Font Mono:size=10
+#font=ComicShannsMono Nerd Font Mono:size=10
+font=ComicShannsMono Nerd Font:style=Regular
 # font-bold=<bold variant of regular font>
 # font-italic=<italic variant of regular font>
 # font-bold-italic=<bold+italic variant of regular font>
@@ -25,7 +26,7 @@ font=ComicShannsMono Nerd Font Mono:size=10
 # initial-window-size-pixels=700x500  # Or,
 # initial-window-size-chars=<COLSxROWS>
 # initial-window-mode=windowed
- pad=10x10                             # optionally append 'center'
+ pad=50x50                             # optionally append 'center'
 # resize-delay-ms=100
 
 # notify=notify-send -a ${app-id} -i ${app-id} ${title} ${body}
@@ -71,7 +72,8 @@ font=ComicShannsMono Nerd Font Mono:size=10
 
 [colors]
 foreground=cdd6f4 # Text
-background=1e1e2e # Base
+# background=1e1e2e # Base (normal theme)
+background=000000 # Base
 regular0=45475a   # Surface 1
 regular1=f38ba8   # red
 regular2=a6e3a1   # green
