--- a/.config/hypr/colors.conf
+++ b/.config/hypr/colors.conf
@@ -1,18 +1,18 @@
-    $foregroundCol = 0xffc3c6c4
-    $backgroundCol = 0xff1f1511
-    $color0 = 0xff1f1511
-    $color1 = 0xff7E807D
-    $color2 = 0xff918778
-    $color3 = 0xff60748E
-    $color4 = 0xff72879A
-    $color5 = 0xff7992A3
-    $color6 = 0xff78A0C0
-    $color7 = 0xffc3c6c4
-    $color8 = 0xff888a89
-    $color9 = 0xff7E807D
-    $color10 = 0xff918778
-    $color11 = 0xff60748E
-    $color12 = 0xff72879A
-    $color13 = 0xff7992A3
-    $color14 = 0xff78A0C0
-    $color15 = 0xffc3c6c4
+    $foregroundCol = 0xffe7cdbf
+    $backgroundCol = 0xff0a0f0f
+    $color0 = 0xff0a0f0f
+    $color1 = 0xffCF986F
+    $color2 = 0xff2B5D85
+    $color3 = 0xff306A98
+    $color4 = 0xff316A98
+    $color5 = 0xff477197
+    $color6 = 0xffA99B94
+    $color7 = 0xffe7cdbf
+    $color8 = 0xffa18f85
+    $color9 = 0xffCF986F
+    $color10 = 0xff2B5D85
+    $color11 = 0xff306A98
+    $color12 = 0xff316A98
+    $color13 = 0xff477197
+    $color14 = 0xffA99B94
+    $color15 = 0xffe7cdbf
