--- a/.config/sway/config
+++ b/.config/sway/config
@@ -32,10 +32,10 @@ set $menu rofi -show drun
 #
 #   output HDMI-A-1 resolution 1920x1080 position 1920,0
 output eDP-1 mode 2256x1504 pos 0 0 scale 1.5
-# DO NOT USE is with USB-C to USB-C Framework adapter and then a USB-C to DisplayPort adapter and then a DisplayPort to VGA adapter :)
-output "DO NOT USE - RTK 0x1D1A 0x01010101" mode 1920x1080 pos 1504 0 transform 90 
-output "Microstep Optix AG32C 0000000000001" mode 1920x1080@165Hz pos 2584 0
+output "Philips Consumer Electronics Company PHL 223V5 ZVC1438014064" mode 1920x1080@60Hz pos 1504 0 transform 90
+output "Microstep Optix AG32C 0000000000001" mode 1920x1080@60Hz pos 2584 0
 output "Fujitsu Siemens Computers GmbH E24T-7 LED YV8X006903" mode 1920x1080@60Hz pos 4504 0 transform 270
+output "Synaptics Inc Non-PnP 0x00BC614E" mode 1920x1080@60Hz pos 4504 0 transform 270
 #
 # You can get the names of your outputs by running: swaymsg -t get_outputs
 
@@ -46,6 +46,7 @@ workspace  3 output "Microstep Optix AG32C 0000000000001"
 workspace  7 output "Fujitsu Siemens Computers GmbH E24T-7 LED YV8X006903" 
 workspace  8 output "DO NOT USE - RTK 0x1D1A 0x01010101"
 workspace  9 output "Fujitsu Siemens Computers GmbH E24T-7 LED YV8X006903"
+workspace  9 output "Synaptics Inc Non-PnP 0x00BC614E"
 workspace 10 output eDP-1
 
 ### Idle configuration
@@ -109,10 +110,10 @@ input type:touchpad {
     bindsym $mod+Shift+n exec notes
     bindsym $mod+Shift+v exec virt-manager
     bindsym Mod4+Shift+l exec lock
-    bindsym $mod+F2 exec --no-startup-id pactl set-sink-volume @DEFAULT_SINK@ +5%; notify-send "Volume is at $(pulsemixer --get-volume | cut -d' ' -f1)%"
-    bindsym $mod+F3 exec --no-startup-id pactl set-sink-volume @DEFAULT_SINK@ -5%; notify-send "Volume is at $(pulsemixer --get-volume | cut -d' ' -f1)%"
-    bindsym $mod+F7 exec --no-startup-id doas brightnessctl s 5%-; notify-send -r 45829 "Brightness is at $(brightnessctl info | grep % | awk '{print $4}' | cut -d\( -f2 | cut -d\) -f1)"
-    bindsym $mod+F8 exec --no-startup-id doas brightnessctl s 5%+; notify-send -r 45829 "Brightness is at $(brightnessctl info | grep % | awk '{print $4}' | cut -d\( -f2 | cut -d\) -f1)"
+    #bindsym $mod+F2 exec --no-startup-id pactl set-sink-volume @DEFAULT_SINK@ +5%; notify-send "Volume is at $(pulsemixer --get-volume | cut -d' ' -f1)%"
+    #bindsym $mod+F3 exec --no-startup-id pactl set-sink-volume @DEFAULT_SINK@ -5%; notify-send "Volume is at $(pulsemixer --get-volume | cut -d' ' -f1)%"
+    #bindsym $mod+F7 exec --no-startup-id doas brightnessctl s 5%-; notify-send -r 45829 "Brightness is at $(brightnessctl info | grep % | awk '{print $4}' | cut -d\( -f2 | cut -d\) -f1)"
+    #bindsym $mod+F8 exec --no-startup-id doas brightnessctl s 5%+; notify-send -r 45829 "Brightness is at $(brightnessctl info | grep % | awk '{print $4}' | cut -d\( -f2 | cut -d\) -f1)"
 
     # Drag floating windows by holding down $mod and left mouse button.
     # Resize them with right mouse button + $mod.
@@ -164,6 +165,18 @@ input type:touchpad {
     bindsym $mod+8 workspace number 8
     bindsym $mod+9 workspace number 9
     bindsym $mod+0 workspace number 10
+    bindsym $mod+F1 workspace number 11
+    bindsym $mod+F2 workspace number 12
+    bindsym $mod+F3 workspace number 13
+    bindsym $mod+F4 workspace number 14
+    bindsym $mod+F5 workspace number 15
+    bindsym $mod+F6 workspace number 16
+    bindsym $mod+F7 workspace number 17
+    bindsym $mod+F8 workspace number 18
+    bindsym $mod+F9 workspace number 19
+    bindsym $mod+F10 workspace number 20
+    bindsym $mod+F11 workspace number 20
+    bindsym $mod+F12 workspace number 20
     # Move focused container to workspace
     bindsym $mod+Shift+1 move container to workspace number 1
     bindsym $mod+Shift+2 move container to workspace number 2
@@ -175,6 +188,18 @@ input type:touchpad {
     bindsym $mod+Shift+8 move container to workspace number 8
     bindsym $mod+Shift+9 move container to workspace number 9
     bindsym $mod+Shift+0 move container to workspace number 10
+    bindsym $mod+Shift+F1 move container to workspace number 11
+    bindsym $mod+Shift+F2 move container to workspace number 12
+    bindsym $mod+Shift+F3 move container to workspace number 13
+    bindsym $mod+Shift+F4 move container to workspace number 14
+    bindsym $mod+Shift+F5 move container to workspace number 15
+    bindsym $mod+Shift+F6 move container to workspace number 16
+    bindsym $mod+Shift+F7 move container to workspace number 17
+    bindsym $mod+Shift+F8 move container to workspace number 18
+    bindsym $mod+Shift+F9 move container to workspace number 19
+    bindsym $mod+Shift+F10 move container to workspace number 20
+    bindsym $mod+Shift+F11 move container to workspace number 21
+    bindsym $mod+Shift+F12 move container to workspace number 22
     # Note: workspaces can have any name you want, not just numbers.
     # We just use 1-10 as the default.
 #
